# DIETR

./: LICENSE  README.md  pyproject.toml
DIETR/: README.md
__config__/: 00-base-box.yaml  00-base-msk.yaml  01-base-box-small-eval.yaml  01-base-msk-small-eval.yaml
src/dietr/: __init__.py  dietr_wrapper.py  trn.py  val.py
src/dietr/data/: box_conversion.py  coco_definitions.py  conversion.py  dataloaders.py  loading.py  msk_conversion.py  trn_batch_collate.py  trn_dataset.py  val_batch_collate.py  val_dataset.py
src/dietr/data/transforms/: base.py  mosaic.py  photometric.py  random_crop.py  random_zoom.py
src/dietr/modeling/: ema.py
src/dietr/modeling/base/: blocks.py  deformable_attention.py  layers.py  projections.py  query_denoising.py
src/dietr/modeling/dietr/: back_convnext.py  dietr.py  head.py  mask.py  neck.py
src/dietr/modeling/loss/: loss.py  matcher.py
src/dietr/tools/: dietr_wrapper.py  distributed.py  logging.py  plot_coco.py  plot_internal.py  split_coco.py  training.py  validation.py
tests/: test_readme.py
tests/test_data/: test_config_coco_mini.yaml  test_config_tune.yaml
tests/test_data/coco_mini/: instances_train2017_16.json
tests/test_data/synthetic-flying-things/: annotations.json_4.json
