[project]
name = "dietr"
version = "0.1.0"
description = "DIETR project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "msgpack>=1.1.2",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.10",
    "pyyaml>=6.0.2",
    "scipy>=1.16.0",
    "scipy>=1.16.0",
    "tensorboard>=2.16.2",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
    "torch>=2.5.1",
    "torchvision>=0.20.0",
]

[project.optional-dependencies]
cu128 = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
cu121 = [
    "torch>=2.5.1",
    "torchvision>=0.20.0",
]
cpu = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
conflicts = [
    [
        { extra = "cu128" },
        { extra = "cu121" },
        { extra = "cpu" },
    ],
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cpu", extra = "cpu" },

]
torchvision = [
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cpu", extra = "cpu" },

]
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
